--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
         <title>QR Code</title>
         <meta charset="UTF-8"/>
         <link href="stylesheet.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <div class="container">
             <div class="qr_code"></div>
             <div class="block_text">
-                <div class="texte1"></div>
-                <div class="texte2"></div>
+                <div class="texte1">
+                    <p>
+                        Improve yout front-end skills by building projects
+                    <p>
+                </div>
+                <div class="texte2">
+                    <p>
+                        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+                    </p>
+                </div>
             </div>
         </div>
     </body>
